# textparser

./: .gitignore  CMakeLists.txt  NEW_ALGORITHM.md  README.md  ROADMAP.md  adv_regex.c  adv_regex.h  build.sh  build_wasm.sh  cfml_definition.h  json_definition.h  main.c  php_definition.h  textparser-json.pc.in  textparser.c  textparser.h  textparser.pc.in  textparser.pro
.github/: copilot-instructions.md
MacOS/: install.sh  textparser.rb
ccat/: CMakeLists.txt  main.c
cli/: CMakeLists.txt  main.c
cmake/: WasmDeps.cmake
definitions/: ada_definition.json  asm_definition.json  bash_definition.json  c3_definition.json  c_definition.json  cfml_definition.h  cfml_definition.json  cpp_definition.json  csharp_definition.json  css_definition.json  fortran_definition.json  go_definition.json  html_definition.json  jai_definition.json  java_definition.json  javascript_definition.json  json2h.py  json_definition.h  json_definition.json  matlab_definition.json  pascal_definition.json  perl_definition.json  php_definition.h  php_definition.json  python_definition.json  r_definition.json  regenerate.sh  rust_definition.json  scratch_definition.json  sql_definition.json  swift_definition.json  typescript_definition.json  vb_definition.json  zig_definition.json
include/: adv_regex.h  logger.h  textparser-json.h  textparser.h
os/: os.h  os_posix.c  os_win.c
python/: parse.py  parsedir.py  textparser.py  validate.py
src/: CMakeLists.txt  TextParser.cs  adv_regex.c  textparser-json.c  textparser.c  textparserConfig.cmake.in  wasm_bind.c
src/validation/: CMakeLists.txt  cfml.c  cfml.h  cfml_common.h  cfml_functions.h  cfml_tags.h  css.c  css.h  css_tags.h  html.c  html.h  html_common.h  html_tags.h  php.c  php.h  php_common.h  php_functions.h  test_cfml.c  test_css.c  test_html.c  test_php.c
stuff/: ColdFusion.h  re.c
tests/: CMakeLists.txt
tests/cfml_validator/: CMakeLists.txt  main.cpp
tests/qguitextparser/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  qcodeeditwidget.cpp  qcodeeditwidget.h  qjsonhighlighter.cpp  qjsonhighlighter.h
tests/qguitextparser/qcodeeditwidget/: qcodeeditwidget.cpp  qcodeeditwidget.h
tests/qscintilla/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/unittests/: CMakeLists.txt  ada_tests.cpp  asm_tests.cpp  bash_tests.cpp  c3_tests.cpp  c_tests.cpp  cfml_tests.cpp  cpp_tests.cpp  csharp_tests.cpp  css_tests.cpp  fortran_tests.cpp  go_tests.cpp  html_tests.cpp  jai_tests.cpp  java_tests.cpp  javascript_tests.cpp  json_tests.cpp  matlab_tests.cpp  pascal_tests.cpp  perl_tests.cpp  php_tests.cpp  python_tests.cpp  r_tests.cpp  rust_tests.cpp  scratch_tests.cpp  sql_tests.cpp  subtraction_tests.cpp  swift_tests.cpp  tokenparser.hpp  typescript_tests.cpp  unittests.cpp  vb_tests.cpp  zig_tests.cpp
windows/: build.bat  build_deps.bat  build_zip.bat
